== Firebug Lite 1.2 Change Log ==

2009-02-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Added Firefox version check when using firebug.env.override to prevent problems when override is set in FF3 where window.console is a getter
  * firebug-lite.js: Moved console initialization code inside of the Firebug object to remove some global variables
  * firebug-lite.js & firebug-lite.css: Fixed Issue 1348 - String, Date and Boolean objects should be displayed similar to their primitive counterparts

2009-02-05 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Added firebug.env.detectFirebug to prevent FBLite opening when Firebug is enabled (actually the Firebug Console). To run FBLite and Firebug at the same time it is now necessary to change the value of detectFirebug directly in firebug-lite.js
  * Fixed multiple console initialization and override issues

2009-02-05 Azer Koculu <azer@kodfabrik.com>
  * firebug-lite.css: mime-type property has been set to "text/css".

2009-02-04 Azer Koculu <azer@kodfabrik.com>
  * firebug-lite.js: Changed default css url getfirebug.com to fbug.google.com
  * firebug-lite-compressed.js: It was unnecesseary, removed.

2009-02-02 Azer Koculu <azer@kodfabrik.com>
  * Copied latest source to googlecode repository.

2009-01-31 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Added extra hotkeys to show / hide FBLite:
    F12, (CTRL|CMD)+SHIFT+L, SHIFT+ENTER
  * firebug-lite.js: Added console.firebug command to show FBLite version number
  * firebug-lite.js: Fixed problem with Open in New Window in Safari
  * firebug-lite.js: Added debug="true/false" to show or hide FBLite on startup
  
2009-01-01 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js & firebug-lite.css: Added Open in New Window
  * firebug-lite.js: Fixed: HTML Inspect only worked in 1 very specific situation ... it now works in all situations